--- a/db/settings.json
+++ b/db/settings.json
@@ -1,7 +1,7 @@
 {
   "host": "localhost",
   "port": 3306,
-  "user": "testUser",
-  "password": "1234",
+  "user": "root",
+  "password": "",
   "database": "bookshare_db"
 }
