--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/iaraedelstein/tp-integrador-g4#readme",
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.7"
