--- a/db/settings.json
+++ b/db/settings.json
@@ -2,6 +2,6 @@
   "host": "localhost",
   "port": 3306,
   "user": "root",
-  "password": "root",
+  "password": "",
   "database": "bookshare_db"
 }
