--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-    "name": "tp-integrador-g4",
-    "version": "1.0.0",
-    "description": "TP integrador Grupo 4",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index.js",
-        "dev": "nodemon index.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/iaraedelstein/tp-integrador-g4.git"
-    },
-    "author": "Grupo 4",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/iaraedelstein/tp-integrador-g4/issues"
-    },
-    "homepage": "https://github.com/iaraedelstein/tp-integrador-g4#readme",
-    "dependencies": {
-        "cors": "^2.8.5",
-        "express": "^4.17.1",
-        "mysql": "^2.18.1",
-        "nodemon": "^2.0.7"
-    }
+  "name": "tp-integrador-g4",
+  "version": "1.0.0",
+  "description": "TP integrador Grupo 4",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iaraedelstein/tp-integrador-g4.git"
+  },
+  "author": "Grupo 4",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/iaraedelstein/tp-integrador-g4/issues"
+  },
+  "homepage": "https://github.com/iaraedelstein/tp-integrador-g4#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "install": "^0.13.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.7",
+    "util": "^0.12.4"
+  }
 }
